make font readable when solved

--- a/CTFd/themes/admindojo/static/css/base.css
+++ b/CTFd/themes/admindojo/static/css/base.css
@@ -104,8 +104,8 @@ table > thead > tr > td {
     white-space: nowrap;
     font-size: 14px;
     line-height: 20px;
-    /*font-weight: 700;*/
-    /*padding: 8px 20px;*/
+    font-weight: 700;
+    padding: 8px 20px;
 }
 
 .btn-info {
